--- a/ref.bib
+++ b/ref.bib
@@ -664,6 +664,16 @@
 	doi                      = {10.1109/ISBI.2009.5193327}
 }
 
+@Article{beck_2009_fista,
+	Title                    = {{A fast iterative shrinkage-thresholding algorithm for linear inverse problems}},
+	Author                   = {Beck, Amir and Teboulle, Marc},
+	Journal                  = {SIAM J. Imaging Sciences},
+	Year                     = {2009},
+	Pages                    = {183-202},
+	Volume                   = {2},
+	doi                      = {10.1137/080716542}
+}
+
 @Article{block_2009_mobat2,
 	Title                    = {{Model-based iterative reconstruction for radial fast spin-echo MRI}},
 	Author                   = {Block, Kai Tobias and Uecker, Martin and Frahm, Jens},
@@ -783,6 +793,15 @@
 	Year                     = {2010},
 	Volume                   = {27},
 	Pages                    = {81-89}
+}
+
+@InProceedings{gregor_2010_algunroll,
+	Title                    = {{Learning fast approximations of sparse coding}},
+	Author                   = {Gregor, Karol and LeCun, Yann},
+	Booktitle                = {27th International Conference on Machine Learning (ICML'27)},
+	Year                     = {2010},
+	Pages                    = {399-406},
+	doi                      = {10.5555/3104322.3104374}
 }
 
 @Article{grissom_2010_ptx,
@@ -1217,6 +1236,15 @@
 	Volume                   = {73}
 }
 
+@InProceedings{ronneberger_2015_unet,
+	Title                    = {{U-Net: Convolutional Networks for Biomedical Image Segmentation}},
+	Author                   = {Ronneberger, Olaf and Fischer, Philipp and Brox, Thomas},
+	Booktitle                = {18th International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI'18)},
+	Year                     = {2015},
+	Pages                    = {234-241},
+	doi                      = {10.1007/978-3-319-24574-4_28}
+}
+
 @InProceedings{uecker_2015_bart,
 	Title                    = {{Berkeley Advanced Reconstruction Toolbox}},
 	Author                   = {Uecker, Martin and Ong, Frank and Tamir, Jonathan I and Bahri, Dara and Virtue, Patrick and Cheng, Joseph Y and Zhang, Tao and Lustig, Michael},
@@ -1576,6 +1604,16 @@
 	Volume                   = {37}
 }
 
+@Article{zhu_2018_automap,
+	Title                    = {{Image reconstruction by domain-transform manifold learning}},
+	Author                   = {Zhu, Bo and Liu, Jeremiah Z and Cauley, Stephen F and Rosen, Bruce R and Rosen, Matthew S},
+	Journal                  = {Nature},
+	Year                     = {2018},
+	Pages                    = {487-492},
+	Volume                   = {555},
+	doi                      = {10.1038/nature25988}
+}
+
 @Article{akcakaya_2019_raki,
 	Title                    = {{Scan-specific robust artificial-neural-networks for $k$-space interpolation (RAKI) reconstruction: Database-free deep learning for fast imaging}},
 	Author                   = {Ak\c{c}akaya, Mehmet and Moeller, Steen and Weing\"{a}rtner, Sebastian and U\u{g}urbil, K\^{a}mil},
@@ -1836,6 +1874,16 @@
 	Year                     = {2020},
 	Pages                    = {118-129},
 	Volume                   = {53}
+}
+
+@Article{liu_2021_relax,
+	Title                    = {{Magnetic resonance parameter mapping using model-guided self-supervised deep learning}},
+	Author                   = {Liu, Fang and Kijowski, Richard and Fakhri, Georges El and Feng, Li},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2021},
+	Pages                    = {3211-3226},
+	Volume                   = {85},
+	doi                      = {10.1002/mrm.28659}
 }
 
 @Article{mani_2021_qmodel,
