--- a/ref.bib
+++ b/ref.bib
@@ -37,7 +37,7 @@
 
 @Article{brown_1982_mrsi,
 	Title                    = {{NMR chemical shift imaging in three dimensions}},
-	Author                   = {Brown, T. R. and Kincaid, B. M. and Ugurbil, K.},
+	Author                   = {Brown, T. R. and Kincaid, B. M. and U\u{g}urbil, K.},
 	Journal                  = {Proc. Natl. Acad. Sci. USA},
 	Year                     = {1982},
 	Pages                    = {3532-3526},
