pgse and fastmri

--- a/ref.bib
+++ b/ref.bib
@@ -14,6 +14,16 @@
 	doi                      = {10.6028/jres.049.044}
 }
 
+@Article{stejskal_1965_pgse,
+	Title                    = {Spin diffusion measurements: Spin echoes in the presence of time-dependent field gradient},
+	Author                   = {Stejskal, Edward O. and Tanner, John},
+	Journal                  = {J. Chem. Phys.},
+	Year                     = {1965},
+	Pages                    = {288-292},
+	Volume                   = {42},
+	doi                      = {10.1063/1.1695690}
+}
+
 @Article{mansfield_1977_epi,
 	Title                    = {{Multi-planar image formation using NMR spin echoes}},
 	Author                   = {Mansfield, Peter},
@@ -1732,7 +1742,7 @@
 	Volume                   = {202},
 	Pages                    = {116137},
 	Year                     = {2019},
-	doi = {https://doi.org/10.1016/j.neuroimage.2019.116137}
+	doi                      = {10.1016/j.neuroimage.2019.116137}
 }
 
 @Article{wang_2019_epti,
@@ -1809,6 +1819,16 @@
 	Year                     = {2020},
 	Pages                    = {1565-1576},
 	Volume                   = {83}
+}
+
+@Article{knoll_2020_fastmri,
+	Title                    = {{fastMRI: A Publicly Available Raw k-Space and DICOM Dataset of Knee Images for Accelerated MR Image Reconstruction Using Machine Learning}},
+	Author                   = {Knoll, Florian and Zbontar, Jure and Sriram, Anuroop and Muckley, Matthew J. and Bruno, Mary and Defazio, Aaron and Parente, Marc and Geras, Krzysztof J. and Katsnelson, Joe and Chandarana, Hersh and Zhang, Zizhao and Drozdzalv, Michal and Romero, Adriana and Rabbat, Michael and Vincent, Pascal and Pinkerton, James and Wang, Duo and Yakubova, Nafissa and Owens, Erich and Zitnick, C. Lawrence and Recht, Michael P. and Sodickson, Daniel K. and Lui, Yvonne W.},
+	Journal                  = {Radiology: Artificial Intelligence},
+	Year                     = {2020},
+	Volume                   = {2},
+	Pages                    = {e190007},
+	doi                      = {10.1148/ryai.2020190007}
 }
 
 @Article{rosenzweig_2020_ssa,
