resnet and admm-csnet

--- a/ref.bib
+++ b/ref.bib
@@ -1282,6 +1282,14 @@
 	Volume                   = {74}
 }
 
+@InProceedings{he_2016_resnet,
+	Title                    = {{Deep residual learning for image recognition}},
+	Author                   = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
+	Booktitle                = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR'16)},
+	Year                     = {2016},
+    Pages                    = {770-778}
+}
+
 @InProceedings{feng_2016_vdGRASP,
 	Title                    = {{Motion-resolved golden-angle radial sparse MRI using variable-density stack-of-stars sampling}},
 	Author                   = {Feng, Li and Zhao, Tiejun and Chandarana, Hersh and Sodickson, Daniel K and Otazo, Ricardo},
@@ -1603,6 +1611,16 @@
 	Pages                    = {39-47},
 	Volume                   = {47},
 	doi                      = {10.1016/j.mri.2017.11.011}
+}
+
+@Article{yang_2018_admmnet,
+	Title                    = {{ADMM-CSNet: A Deep Learning Approach for Image Compressive Sensing}},
+	Author                   = {Yang, Yan and Sun, Jian and Li, Huibin and Xu, Zongben},
+	Journal                  = {IEEE Transactions on Pattern Analysis and Machine Intelligence},
+	Year                     = {2018},
+	Pages                    = {521-538},
+	Volume                   = {42},
+	doi                      = {10.1109/TPAMI.2018.2883941}
 }
 
 @Article{zimmermann_2018_mobamgre,
