updates: spiral diff, musium, and epti-diff

--- a/ref.bib
+++ b/ref.bib
@@ -394,6 +394,16 @@
 	Volume                   = {51}
 }
 
+@Article{liu_2004_diff_spiral,
+	Title                    = {{Self-navigated interleaved spiral (SNAILS): Application to high-resolution diffusion tensor imaging}},
+	Author                   = {Liu, Chunlei and Bammer, Roland and Kim, Dong-hyun and Moseley, Michael E},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2004},
+	Pages                    = {1388-1396},
+	Volume                   = {52},
+	doi                      = {10.1002/mrm.20288}
+}
+
 @Article{reeder_2004_mcideal,
 	Title                    = {{Multicoil Dixon chemical species separation with an iterative least-squares estimation method}},
 	Author                   = {Reeder, Scott B and Wen, Zhifei and Yu, Huanzhou and Pineda, Angel R and Gold, Garry E and Markl, Michael and Pelc, Norbert J},
@@ -1914,6 +1924,14 @@
 	Volume                   = {53}
 }
 
+@InProceedings{chang_2021_musium,
+	Title                    = {{Navigator-Free Submillimeter Diffusion MRI using Multishot-encoded Simultaneous Multi-slice (MUSIUM) Imaging}},
+	Author                   = {Chang, Wei-Tang and Huynh, Khoi Minh and Yap, Pew-Thian and Lin, Weili},
+	Booktitle                = {Proceedings of the 29th Annual Meeting of ISMRM},
+	Year                     = {2021},
+	Pages                    = {1322}
+}
+
 @Article{liu_2021_relax,
 	Title                    = {{Magnetic resonance parameter mapping using model-guided self-supervised deep learning}},
 	Author                   = {Liu, Fang and Kijowski, Richard and Fakhri, Georges El and Feng, Li},
@@ -1997,6 +2015,16 @@
 	Year                     = {2021},
 	Note                     = {021011},
 	Volume                   = {21}
+}
+
+@Article{dai_2023_epti-diff,
+	Title                    = {{Distortion-free diffusion imaging using self-navigated Cartesian echo-planar time resolved acquisition and joint magnitude and phase constrained reconstruction}},
+	Author                   = {Dai, Erpeng and Lee, Philip K and Dong, Zijing and Fu, Fanrui and Setsompop, Kawin and McNab, Jennifer A},
+	Journal                  = {IEEE Trans Med Imaging},
+	Year                     = {2022},
+	Pages                    = {63-74},
+	Volume                   = {41},
+	doi                      = {10.1109/TMI.2021.3104291}
 }
 
 @Article{dong_2022_ace-epti,
