update ref list

--- a/ref.bib
+++ b/ref.bib
@@ -1491,6 +1491,16 @@
 	doi                      = {10.1002/jmri.25664}
 }
 
+@Article{zahneisen_2017_blipud,
+	Title                    = {{Extended hybrid-space SENSE for EPI: Off-resonance and eddy current corrected joint interleaved blip-up/down reconstruction}},
+	Author                   = {Zahneisen, Benjamin and Aksoy, Murat and Maclaren, Julian and Wuerslin, Christian and Bammer, Roland},
+	Journal                  = {NeuroImage},
+	Year                     = {2017},
+	Pages                    = {97-108},
+	Volume                   = {153},
+	doi                      = {10.1016/j.neuroimage.2017.03.052}
+}
+
 @Article{armstrong_2018_fat,
 	Title                    = {{Free-breathing liver fat quantification using a multiecho 3D stack-of-radial techqniue}},
 	Author                   = {Armstrong, Tess and Dregely, Isabel and Stemmer, Alto and Han, Fei and Natsuaki, Yutaka and Sung, Kyunghyun and Wu, Holden H.},
@@ -1930,6 +1940,26 @@
 	Booktitle                = {Proceedings of the 29th Annual Meeting of ISMRM},
 	Year                     = {2021},
 	Pages                    = {1322}
+}
+
+@Article{dai_2021_smslab,
+	Title                    = {{High-resolution whole-brain diffusion MRI at 3T using simultaneous multi-slab (SMSlab) acquisition}},
+	Author                   = {Dai, Erpeng and Liu, Simin and Guo, Hua},
+	Journal                  = {NeuroImage},
+	Year                     = {2021},
+	Pages                    = {118099},
+	Volume                   = {237},
+	doi                      = {10.1016/j.neuroimage.2021.118099}
+}
+
+@Article{huang_2021_hcp2,
+	Title 					= {{Connectome 2.0: Developing the next-generation ultra-high gradient strength human MRI scanner for bridging studies of the micro-, meso- and macro-connectome}},
+	Journal 				= {NeuroImage},
+	Volume 					= {243},
+	Pages 					= {118530},
+	Year 					= {2021},
+	doi 					= {10.1016/j.neuroimage.2021.118530},
+	Author 					= {Susie Y. Huang and Thomas Witzel and Boris Keil and Alina Scholz and Mathias Davids and Peter Dietz and Elmar Rummert and Rebecca Ramb and John E. Kirsch and Anastasia Yendiki and Qiuyun Fan and Qiyuan Tian and Gabriel Ramos-Llordén and Hong-Hsi Lee and Aapo Nummenmaa and Berkin Bilgic and Kawin Setsompop and Fuyixue Wang and Alexandru V. Avram and Michal Komlosh and Dan Benjamini and Kulam Najmudeen Magdoom and Sudhir Pathak and Walter Schneider and Dmitry S. Novikov and Els Fieremans and Slimane Tounekti and Choukri Mekkaoui and Jean Augustinack and Daniel Berger and Alexander Shapson-Coe and Jeff Lichtman and Peter J. Basser and Lawrence L. Wald and Bruce R. Rosen}
 }
 
 @Article{liu_2021_relax,
