update ref on meco

--- a/ref.bib
+++ b/ref.bib
@@ -2127,9 +2127,11 @@
 
 @ARTICLE{tan_2022_meco,
 	Title                    = {{Free-breathing liver fat, $R_2^*$ and $B_0$ field mapping using multi-echo radial FLASH and regularized model-based reconstruction}},
-	Author                   = {\authoremph{Tan}, \authoremph{Zhengguo} and Unterberg-Buchwald, Christina and Blumenthal, Moritz and Scholand, Nick and Schaten, Philip and Holme, Christian and Wang, Xiaoqing and Raddatz, Dirk and Uecker, Martin},
+	Author                   = {Tan, Zhengguo and Unterberg-Buchwald, Christina and Blumenthal, Moritz and Scholand, Nick and Schaten, Philip and Holme, Christian and Wang, Xiaoqing and Raddatz, Dirk and Uecker, Martin},
 	Journal                  = {IEEE Transactions on Medical Imaging},
 	Year                     = {2022},
+	Pages                    = {1374-1387},
+	Volume                   = {42},
 	doi                      = {10.1109/TMI.2022.3228075}
 }
 
