--- a/ref.bib
+++ b/ref.bib
@@ -1164,6 +1164,13 @@
 	doi                      = {10.48550/arXiv.1312.6114}
 }
 
+@InProceedings{kingma_2015_adam,
+	Title                    = {{ADAM: A Method for Stochastic Optimization}},
+	Author                   = {Kingma, Diederik P and Ba, Jimmy},
+	Booktitle                = {3rd International Conference on Learning Representations (ICLR'3)},
+	Year                     = {2015}
+}
+
 @article{madore_2014_acce_ms_dti,
 	Title                    = {{Accelerated multi-shot diffusion imaging}},
 	Author                   = {Madore, Bruno and Chiou, Jr-yuan George and Chu, Renxin and Chao, Tzu-Cheng and Maier, Stephan E.},
