--- a/ref.bib
+++ b/ref.bib
@@ -1304,7 +1304,7 @@
 	Author                   = {He, Kaiming and Zhang, Xiangyu and Ren, Shaoqing and Sun, Jian},
 	Booktitle                = {IEEE Conference on Computer Vision and Pattern Recognition (CVPR'16)},
 	Year                     = {2016},
-    Pages                    = {770-778}
+	Pages                    = {770-778}
 }
 
 @InProceedings{feng_2016_vdGRASP,
@@ -2177,8 +2177,8 @@
 	Author                   = {Heydari, Amir and Ahmadi, Abbas and Kim, Tae Hyung and Bilgic, Berkin},
 	Journal                  = {Magn. Reson. Med.},
 	Year                     = {2024},
-	Pages                    = {},
-	Volume                   = {},
+	Pages                    = {2294-2309},
+	Volume                   = {91},
 	doi                      = {10.1002/mrm.29989}
 }
 
@@ -2190,4 +2190,24 @@
 	Pages                    = {1-15},
 	Volume                   = {2},
 	doi                      = {10.1162/imag_a_00085}
+}
+
+@Article{siegel_2024_cancer,
+	Title                    = {Cancer statistics, 2024},
+	Author                   = {Siegel, Rebecca L. and Giaquinto, Angela N. and Jemal, Ahmedin},
+	Journal                  = {CA: A Cancer Journal for Clinicians},
+	Year                     = {2024},
+	Volume                   = {74},
+	Pages                    = {12-49},
+	doi                      = {https://doi.org/10.3322/caac.21820}
+}
+
+@Article{molendowska_2024_spiral_dwi,
+	Title                    = {{Giving the prostate the boost it needs: Spiral diffusion MRI using a high-performance whole-body gradient system for high b-values at short echo times}},
+	Author                   = {Molendowska, Malwina and Mueller, Lars and Fasano, Fabrizio and Jones, Derek K and Tax, Chantal M W and Engel, Maria},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2024},
+	Pages                    = {},
+	Volume                   = {},
+	doi                      = {10.1002/mrm.30351}
 }
