--- a/ref.bib
+++ b/ref.bib
@@ -1377,6 +1377,16 @@
 	Volume                   = {26}
 }
 
+@Article{weinreb_2016_pirads,
+	Title                    = {PI-RADS Prostate Imaging -- Reporting and Data System: 2015, Version 2},
+	Author                   = {Weinreb, Jeffrey C. and Barentsz, Jelle O. and Choyke, Peter L. and Cornud, Francois and Haider, Masoom A. and Macura, Katarzyna J. and Margolis, Daniel and Schnall, Mitchell D. and Shtern, Faina and Tempany, Clare M. and Thoeny, Harriet C. and Verma, Sadna},
+	Journal                  = {European Urology},
+	Year                     = {2016},
+	Volume                   = {69},
+	Pages                    = {16-40},
+	doi                      = {https://doi.org/10.1016/j.eururo.2015.08.052}
+}
+
 @Book{beck_2017_optim,
 	Title                    = {{First-order methods in optimization}},
 	Author                   = {Beck, Amir},
