--- a/ref.bib
+++ b/ref.bib
@@ -684,6 +684,15 @@
 	doi                      = {10.1109/ISBI.2009.5193327}
 }
 
+@Article{barmet_2009_field,
+	Title                    = {{A transmit/receive system for magnetic field monitoring of in vivo MRI}},
+	Author                   = {Barmet, CHristoph and De Zanche, Nicola and Wilm, Bertram J and Pruessmann, Klaas P},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2009},
+	Pages                    = {269-276},
+	Volume                   = {62}
+}
+
 @Article{beck_2009_fista,
 	Title                    = {{A fast iterative shrinkage-thresholding algorithm for linear inverse problems}},
 	Author                   = {Beck, Amir and Teboulle, Marc},
@@ -1855,6 +1864,16 @@
 	Pages                    = {94-108},
 	Volume                   = {83},
 	doi                      = {10.1002/mrm.27903}
+}
+
+@Article{geiger_2020_field,
+	Title                    = {{Optimal echo times for multi-gradient echo-based $B_0$ field mapping}},
+	Author                   = {Geiger, Yasmin and Tal, Assaf},
+	Journal                  = {NMR BioMed.},
+	Year                     = {2020},
+	Pages                    = {e4316},
+	Volume                   = {33},
+	doi                      = {10.1002/nbm.4316}
 }
 
 @Article{hu_2020_spa_llr,
