update ref: zero-shot MUSSELS and romer-epti

--- a/ref.bib
+++ b/ref.bib
@@ -2161,6 +2161,15 @@
 	doi                      = {10.1002/mrm.29468}
 }
 
+@InProceedings{cho_2023_deepslr,
+	Title                    = {{Improved Multi-shot Diffusion-Weighted MRI with Zero-Shot Self-supervised Learning Reconstruction}},
+	Author                   = {Cho, Jaejin and Jun, Yohan and Wang, Xiaoqing and Kobayshi, Caique and Bilgic, Berkin},
+	Booktitle                = {26th International Conference on Medical Image Computing and Computer-Assisted Intervention (MICCAI'26)},
+	Year                     = {2023},
+	Pages                    = {457-466},
+	doi                      = {10.1007/978-3-031-43907-0_44}
+}
+
 @Article{dai_2023_julep,
 	Title                    = {{Multi-band multi-shot diffusion MRI reconstruction with joint usage of structured low-rank constraints and explicit phase mapping}},
 	Author                   = {Dai, Erpeng and Mani, Merry and McNab, Jennifer A},
@@ -2239,4 +2248,14 @@
 	Pages                    = {},
 	Volume                   = {},
 	doi                      = {10.1002/mrm.30351}
+}
+
+@Article{dong_2024_romer-epti,
+	Title                    = {{Romer-EPTI: Rotating-view motion-robust super-resolution EPTI for SNR-efficient distortion-free in-vivo mesoscale diffusion MRI and microstructure imaging}},
+	Author                   = {Dong, Zijing and Reese, Timothy G and Lee, Hong-Hsi and Huang, Susie Y and Polimeni, Jonathan R and Wald, Lawrence L and Wang, Fuyixue},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2024},
+	Pages                    = {},
+	Volume                   = {},
+	doi                      = {10.1002/mrm.30365}
 }
