add SDnDTI paper

--- a/ref.bib
+++ b/ref.bib
@@ -2083,7 +2083,7 @@
 	Volume                   = {21}
 }
 
-@Article{dai_2023_epti-diff,
+@Article{dai_2022_epti-diff,
 	Title                    = {{Distortion-free diffusion imaging using self-navigated Cartesian echo-planar time resolved acquisition and joint magnitude and phase constrained reconstruction}},
 	Author                   = {Dai, Erpeng and Lee, Philip K and Dong, Zijing and Fu, Fanrui and Setsompop, Kawin and McNab, Jennifer A},
 	Journal                  = {IEEE Trans Med Imaging},
@@ -2208,6 +2208,16 @@
 	Pages                    = {1374-1387},
 	Volume                   = {42},
 	doi                      = {10.1109/TMI.2022.3228075}
+}
+
+@Article{tian_2023_sdndti,
+	Title                    = {{SDnDTI: Self-supervised deep learning-based denoising for diffusion tensor MRI}},
+	Author                   = {Tian, Qiyuan and Li, Ziyu and Fan, Qiuyun and Polimeni, Jonathan R and Bilgic, Berkin and Salat, David H and Huang, Susie Y},
+	Journal                  = {NeuroImage},
+	Year                     = {2023},
+	Pages                    = {119033},
+	Volume                   = {253},
+	doi                      = {10.1016/j.neuroimage.2022.119033}
 }
 
 @Article{heydari_2024_jmaple,
