add self2self paper

--- a/ref.bib
+++ b/ref.bib
@@ -1933,6 +1933,15 @@
 	doi                      = {10.1002/mrm.28235}
 }
 
+@InProceedings{quan_2020_self2self,
+    Title                    = {{Self2Self With Dropout: Learning Self-Supervised Denoising From Single Image}},
+    Author                   = {Quan, Yuhui and Chen, Mingqin and Pang, Tongyao and Ji, Hui},
+    Booktitle                = {IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR 2020)},
+    Month                    = {June},
+    Year                     = {2020},
+    doi                      = {10.1109/CVPR42600.2020.00196}
+}
+
 @Article{wang_2020_smst1,
 	title                    = {{Model-based reconstruction for simultaneous multi-slice $T_1$ mapping using single-shot inversion-recovery radial FLASH}},
 	Author                   = {Wang, Xiaoqing and Rosenzweig, Sebastian and Scholand, Nick and Holme, H Christian M and Uecker, Martin},
