update ref: dstripe

--- a/ref.bib
+++ b/ref.bib
@@ -1033,6 +1033,15 @@
 	Volume                   = {67}
 }
 
+@Article{zhao_2012_magphs,
+	Title                    = {{Separate Magnitude and Phase Regularization via Compressed Sensing}},
+	Author                   = {Zhao, Feng and Noll, Douglas C and Nielsen, Jon-Fredrik and Fessler, Jeffrey},
+	Journal                  = {IEEE Trans. Med. Imaging},
+	Year                     = {2012},
+	Pages                    = {1713-1723},
+	Volume                   = {31}
+}
+
 @Article{chen_2013_muse,
 	Title                    = {{A robust multi-shot scan strategy for high-resolution diffusion weighted MRI enabled by multiplexed sensitivity-encoding (MUSE)}},
 	Author                   = {Chen, Nan-Kuei and Guidon, Arnaud and Chang, Hing-Chiu and Song, Allen W},
@@ -1987,6 +1996,24 @@
 	Pages                    = {1322}
 }
 
+@Article{wang_2020_cplxnet,
+	Title                    = {{DeepcomplexMRI: Exploiting deep residual network for fast parallel MR imaging with complex convolution}},
+	Author                   = {Wang, Shanshan and Cheng, Huitao and Ying, Leslie and Xiao, Taohui and Ke, Ziwen and Zheng, Hairong and Liang, Dong},
+	Journal                  = {Magn. Reson. Imaging},
+	Year                     = {2020},
+	Pages                    = {136-147},
+	Volume                   = {68}
+}
+
+@Article{cole_2021_cplxnet,
+	Title                    = {{Analysis of deep complex-valued convolutional neural networks for MRI reconstruction and phase-focused applications}},
+	Author                   = {Cole, Elizabeeth and Cheng, Joseph and Pauly, John and Vasanawala, Shreyas},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2021},
+	Pages                    = {1093-1109},
+	Volume                   = {86}
+}
+
 @Article{dai_2021_smslab,
 	Title                    = {{High-resolution whole-brain diffusion MRI at 3T using simultaneous multi-slab (SMSlab) acquisition}},
 	Author                   = {Dai, Erpeng and Liu, Simin and Guo, Hua},
@@ -2055,6 +2082,15 @@
 	Volume                   = {232}
 }
 
+@Article{hanspach_2021_sample,
+	Title                    = {{Sample size estimation: Current practice and considerations for original investigations in MRI technical development studies}},
+	Author                   = {Hanspach, Jannis and Nagel, Armin M and Hensel, Bernhard and Uder, Michael and Koros, Leon and Laun, Frederik B},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2021},
+	Pages                    = {2109-2116},
+	Volume                   = {85}
+}
+
 @Article{kollmeier_2021_vel_vec_maxwell,
 	Title                    = {{Velocity vector reconstruction for real-time phase-contrast MRI with radial Maxwell correction}},
 	Author                   = {Kollmeier, Jost M and Kalentev, Oleksandr and Klosowski, Jakob and Voit, Dirk and Frahm, Jens},
@@ -2072,6 +2108,16 @@
 	Volume                   = {38},
 	Pages                    = {18-44},
 	doi                      = {10.1109/MSP.2020.3016905}
+}
+
+@Article{pietsch_2021_dstripe,
+	Title                    = {{dStripe: Slice artefact correction in diffusion MRI via constrained neural network}},
+	Author                   = {Pietsch, Maximilian and Christiaens, Daan and Hajnal, Joseph V and Tournier, J-Donald},
+	Journal                  = {Medical Image Analysis},
+	Year                     = {2021},
+	Pages                    = {102255},
+	Volume                   = {74},
+	doi                      = {10.1016/j.media.2021.102255}
 }
 
 @article{solomon_2021_pilot_tone,
