--- a/ref.bib
+++ b/ref.bib
@@ -2324,3 +2324,12 @@
 	Volume                   = {},
 	doi                      = {10.1002/mrm.30365}
 }
+
+@Article{dong_2025_nllr,
+	Title                    = {{Navigator-free multi-shot diffusion MRI via non-local low-rank reconstruction}},
+	Author                   = {Dong, Yiming and Ye, Xinyu and Li, Chang and van Osch, Matthias J P and B\"{o}rnert, Peter},
+	Journal                  = {Magn. Reson. Med.},
+	Year                     = {2025},
+	Pages                    = {1592-1603},
+	Volume                   = {94}
+}
