--- a/ref.bib
+++ b/ref.bib
@@ -1630,6 +1630,15 @@
 	Volume                   = {48}
 }
 
+@InProceedings{lehtinen_2018_noise2noise,
+	Title                    = {{Noise2Noise: Learning Imaging Restoration without Clean Data}},
+	Author                   = {Lehtinen, Jaakko and Munkberg, Jacob and Hasselgren, Jon and Laine, Samuli and Karras, Tero and Aittala, Miika and Aila, Timo},
+	Booktitle                = {Proceedings of the 35th International Conference on Machine Learning (ICML'35)},
+	Year                     = {2018},
+	Pages                    = {2965-2974},
+	doi                      = {10.48550/arXiv.1803.04189}
+}
+
 @Article{maier_2018_carotid,
 	Title                    = {{Carotid artery flow as determined by real-time phase-contrast flow MRI and neurovascular ultrasound: A comparative study of healthy subjects}},
 	Author                   = {Maier, Ilko L and Hofer, Sabine and Joseph, Arun A and Merboldt, K Dietmar and Tan, Zhengguo and Schregel, Katharina and Knauth, Michael and B\"ahr, Mathias and Psychogios, Marios-Nikos and Liman, Jan and Frahm, Jens},
@@ -1948,6 +1957,7 @@
     Booktitle                = {IEEE/CVF Conference on Computer Vision and Pattern Recognition (CVPR 2020)},
     Month                    = {June},
     Year                     = {2020},
+    Pages                    = {1890-1898},
     doi                      = {10.1109/CVPR42600.2020.00196}
 }
 
